- wires up cron scheduler - fixes crud
